# safe-math

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: better.rs  decimal.rs  heapint.rs  integer.rs  lib.rs  parsing.rs  u64ptr.rs  uint.rs
