[package]
name = "safe-math"
version = "0.0.1"
edition = "2024"
authors = ["sam0x17"]
license = "MIT"
description = "Provides non-overflowing, non-panicking numeric types as well as safe big integer and decimal that can scale to any size safely and gracefully, only wasting memory when extra precision is needed"
keywords = ["biginteger", "decimal", "money", "safe", "math"]
documentation = "https://docs.rs/safe-math"
repository = "https://github.com/sam0x17/safe-math"
[dependencies]
quoth = "0.1.7"
rug = "1"
