[features]
default = ["std"]
std = [
    "num-bigint/std",
    "num-traits/std",
    "num-integer/std",
    "quoth/std",
]

[package]
name = "safe-bigmath"
version = "0.4.0"
edition = "2024"
authors = ["sam0x17"]
license = "MIT"
description = "Provides non-overflowing, non-panicking numeric types as well as safe big integer and decimal that can scale to any size safely and gracefully, only wasting memory when extra precision is needed"
keywords = ["biginteger", "decimal", "bigmath", "safe", "math"]
documentation = "https://docs.rs/safe-bigmath"
repository = "https://github.com/sam0x17/safe-bigmath"
[dependencies]
quoth = { version = "0.3", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
